# AI-Customer-Support

./: .gitignore  package-lock.json  package.json
.next/server/: server-reference-manifest.js  server-reference-manifest.json
app/: globals.css  layout.tsx  page.tsx
backend/: CMakeLists.txt  main.cpp
backend/routes/chat/: chat.cpp  chat.h
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/app/: page.tsx
frontend/src/: App.tsx  Page.tsx  main.tsx
